--- a/back-strapi/package.json
+++ b/back-strapi/package.json
@@ -10,7 +10,8 @@
     "strapi": "strapi"
   },
   "devDependencies": {
-    "@nuxtjs/strapi": "^1.3.0"
+    "@nuxtjs/strapi": "^1.3.0",
+    "webpack": "^5.69.1"
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.0.8",
