--- a/front/package.json
+++ b/front/package.json
@@ -19,13 +19,14 @@
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.7",
+    "@nuxt/types": "^2.13.2",
     "@nuxt/typescript-build": "^2.1.0",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
     "jest": "^27.0.5",
     "ts-jest": "^27.0.3",
+    "typescript": "^4.5.5",
     "vue-jest": "^3.0.4"
   }
 }
